--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,1 +1,6 @@
-This 
+header {
+  background: #ffffff url("../images/logo.png") 20px no-repeat;
+  height: 70px;
+  width: 100%;
+  border-bottom: 1px solid #cccccc;
+}
